--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head itemscope itemtype="http://schema.org/WebSite">
-	<base href="/scup/build/" />
+	<base href="/reduxsagaredditfeed/build/" />
 	<meta charset="UTF-8">
-	<title itemprop='name'>Scup Fale Mais</title>
+	<title itemprop='name'>Redux Reddit</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400,700" rel="stylesheet">
 
 
